[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/UI/TextureBrowser.gd" type="Script" id=1]

[sub_resource type="GDScript" id=1]
script/source = "extends Control

func _ready():
	$TextureBrowser.popup()
"

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = SubResource( 1 )

[node name="TextureBrowser" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -365.0
margin_top = -250.0
margin_right = 365.0
margin_bottom = 250.0
popup_exclusive = true
window_title = "Texture Browser"
script = ExtResource( 1 )

[node name="HSplitContainer" type="VSplitContainer" parent="TextureBrowser"]
anchor_right = 1.0
anchor_bottom = 1.0
collapsed = true

[node name="Upper" type="Control" parent="TextureBrowser/HSplitContainer"]
margin_left = 10.0
margin_right = 722.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Clear" type="Button" parent="TextureBrowser/HSplitContainer/Upper"]
margin_left = 87.0
margin_top = 7.0
margin_right = 158.0
margin_bottom = 31.0
text = "Clear"

[node name="LineEdit" type="LineEdit" parent="TextureBrowser/HSplitContainer/Upper"]
margin_left = 168.0
margin_top = 7.0
margin_right = 705.0
margin_bottom = 31.0

[node name="Label" type="Label" parent="TextureBrowser/HSplitContainer/Upper"]
margin_top = 12.0
margin_right = 82.0
margin_bottom = 26.0
text = "Name Filter:"

[node name="HSlider" type="HSlider" parent="TextureBrowser/HSplitContainer/Upper"]
margin_left = 87.0
margin_top = 41.0
margin_right = 226.0
margin_bottom = 57.0
min_value = 4.0
max_value = 8.0
value = 4.0
tick_count = 5
ticks_on_borders = true

[node name="Label2" type="Label" parent="TextureBrowser/HSplitContainer/Upper"]
margin_top = 41.0
margin_right = 82.0
margin_bottom = 55.0
text = "Scale:"
align = 2

[node name="GridContainer" type="GridContainer" parent="TextureBrowser/HSplitContainer"]
margin_top = 62.0
margin_right = 730.0
margin_bottom = 500.0
columns = 4

[connection signal="value_changed" from="TextureBrowser/HSplitContainer/Upper/HSlider" to="TextureBrowser" method="_on_HSlider_value_changed"]
